fix: resolve horizontal scrolling overflow by defining global box-sizing property

--- a/styles/shared/general.css
+++ b/styles/shared/general.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Inter', Roboto, Arial, sans-serif;
   color: rgb(33, 33, 33);
